.metadata/.plugins/org.eclipse.cdt.ui/Test1.build.log
09:42:52 **** Build of configuration Debug for project Test1 ****
make all 
Building file: ../src/Test1.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Test1.d" -MT"src/Test1.o" -o "src/Test1.o" "../src/Test1.cpp"
../src/Test1.cpp: In function ‘int main()’:
../src/Test1.cpp:21:29: error: no matching function for call to ‘getline(std::istream&, char&)’
     while (getline(cin, a[n])) {
                             ^
../src/Test1.cpp:21:29: note: candidates are:
In file included from /usr/include/c++/4.8/string:53:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from ../src/Test1.cpp:10:
/usr/include/c++/4.8/bits/basic_string.tcc:1068:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&, _CharT)
     getline(basic_istream<_CharT, _Traits>& __in,
     ^
/usr/include/c++/4.8/bits/basic_string.tcc:1068:5: note:   template argument deduction/substitution failed:
../src/Test1.cpp:21:29: note:   mismatched types ‘std::basic_string<_CharT, _Traits, _Alloc>’ and ‘char’
     while (getline(cin, a[n])) {
                             ^
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from ../src/Test1.cpp:10:
/usr/include/c++/4.8/bits/basic_string.h:2793:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&)
     getline(basic_istream<_CharT, _Traits>& __is,
     ^
/usr/include/c++/4.8/bits/basic_string.h:2793:5: note:   template argument deduction/substitution failed:
../src/Test1.cpp:21:29: note:   mismatched types ‘std::basic_string<_CharT, _Traits, _Alloc>’ and ‘char’
     while (getline(cin, a[n])) {
                             ^
make: *** [src/Test1.o] Error 1

09:42:53 Build Finished (took 408ms)

